--- a/engines/entity/app/views/entity/indications/new.html.haml
+++ b/engines/entity/app/views/entity/indications/new.html.haml
@@ -65,7 +65,7 @@
                     %p
                       %b= cadastre.name rescue nil
                     %p
-                      %b= cadastre.cpf
+                      %b= cadastre.cpf rescue nil
                     %p
                       .ui.label.blue
                         Novo cadastro
