--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -63,13 +63,13 @@
 - if (indication_active.present? && indication_active.accepted_date.present?) || !indication_active.present? || !indication.present?
   .divider
   .ui.three.column.grid.container.black
-    - @convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where('convocation_id in (1683,1685)')
+    - @convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where('convocation_id in (1683,1685,1688)')
     
     - if !current_cadastre.current_procedural.present? || (current_cadastre.current_procedural.present? && ![8,4].include?(current_cadastre.current_procedural.procedural_status_id))
 
       - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
         
-        - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present? && ((current_cadastre.cadastre_convocations.last.convocation_id != 1688 && current_cadastre.cadastre_convocations.last.convocation_id != 1685 && current_cadastre.cadastre_convocations.last.convocation_id != 1683) || Attendance::CustomTicket.where(cadastre_id: @convocation).present?)
+        - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present? && (![1688,1685,1683].include?(current_cadastre.cadastre_convocations.last.convocation_id) || Attendance::CustomTicket.where(cadastre_id: @convocation).present?)
           .column
             .ui.segment.text-center{style: 'background-color: #0892ff !important'}
               %a{href: "#{attendance.custom_custom_tickets_path}"}
