--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -67,7 +67,7 @@
     
     - if !current_cadastre.current_procedural.present? || (current_cadastre.current_procedural.present? && ![8,4].include?(current_cadastre.current_procedural.procedural_status_id))
 
-      - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
+      - if current_cadastre.program_id !=3 && (current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3))
         
         - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present? && (![1688,1685,1683,1467].include?(current_cadastre.cadastre_convocations.last.convocation_id) || Attendance::CustomTicket.where(cadastre_id: @convocation).present?)
           .column
