--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -32,8 +32,25 @@
     %p
       %span.ui.label.blue.medium.font-black.fluid
         = params[:m]
+        
+  - occurrence_solved = current_cadastre.occurrences.where(solved: false)
+  - convocation = current_cadastre.cadastre_convocations.where(status: true).last
+  - indication_all = current_cadastre.enterprise_cadastres.where('enterprise_id = 22')
   - indication = current_cadastre.enterprise_cadastres.where('enterprise_id not in (59,64,70,71) and inactive is not true and accepted_date is null').last
   - indication_active = current_cadastre.enterprise_cadastres.where('inactive is not true').last
+
+  - if !occurrence_solved.present? && !indication.present? && !indication_all.present? && current_cadastre.current_situation.situation_status_id == 4 && [14,72].include?(current_cadastre.current_procedural.procedural_status_id) && (convocation.present? && convocation.convocation_id > 1524) 
+    %p
+      %span.ui.label.green.font-black{style: 'font-size: 16px !important; text-align: center;'}
+        Você deseja manifestar interesse em participar do empreendimento 
+        %br/
+        %br/
+        %span{style: 'font-size: 20px !important; text-align: center;'}
+          Residencial Julieta?
+    .ui{style: 'margin:0 auto'}
+      = link_to "Sim", new_enterprise_path(cadastre_id: current_cadastre.id, acept_id: 1), class: 'ui  button green', style: 'color: white !important; font-size: 18px', data: { disable_with: 'Processandom aguarde...'}
+      %span{style: 'margin-left: 30px !important'}
+      = link_to "Não", new_enterprise_path(cadastre_id: current_cadastre.id, acept_id: 2), class: 'ui  button red', style: 'color: white !important; font-size: 18px', data: { disable_with: 'Processando aguarde...'}
   - if indication.present?
     %p
       %span.ui.label.green.font-black{style: 'font-size: 14px !important; text-align: center;'}
