--- a/engines/attendance/app/views/attendance/dependents/index.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/index.html.haml
@@ -41,7 +41,7 @@
                   .sub.header
                     - if !@ticket.input_disabled?(@action)
                       = link_to "editar", edit_ticket_dependent_path(@ticket, mirror), class: 'ui button blue mini'
-                      - if @ticket.disable_remove_spouse(mirror)
+                      - if @ticket.disable_remove_spouse(mirror) || params[:del] == 's'
                         = link_to "remover", ticket_dependent_path(@ticket, mirror), class: 'ui button red mini', method: :delete
                       = link_to "Enviar documentação", new_ticket_action_document_path(@ticket, @action, dependent_id: mirror.id), class: 'ui button green mini'
         - else
