--- a/engines/technical_assistance/app/views/technical_assistance/pre_registers/index.html.haml
+++ b/engines/technical_assistance/app/views/technical_assistance/pre_registers/index.html.haml
@@ -2,4 +2,5 @@
   .fifthteen.wide.mobile.column.text-center
     = image_tag ('/images/titulo_melhorias.png')
 .divider
-  .fifthteen.wide.mobile.colum.text-center
+  %h2.melhorias_title.green_title
+    = link_to "Iniciar Registro", new_pre_register_path, style: 'color: white'
