--- a/engines/technical_assistance/app/views/technical_assistance/pre_registers/new.html.haml
+++ b/engines/technical_assistance/app/views/technical_assistance/pre_registers/new.html.haml
@@ -4,7 +4,7 @@
 .divider
   .fifthteen.wide.mobile.colum.text-center
     %h2
-      Pré-Cadastro
+      Registro de Interesse
     %br
   .fifthteen.wide.mobile.colum.text-center
     .green_title
