--- a/engines/technical_assistance/app/views/technical_assistance/home/melhorias.html.haml
+++ b/engines/technical_assistance/app/views/technical_assistance/home/melhorias.html.haml
@@ -12,4 +12,4 @@
     %h2.melhorias_title.blue_title
       entenda as etapas
     %h2.melhorias_title.green_title
-      = link_to 'Registro de Interesse', pre_registers_path, style: 'color: white'
+      = link_to 'registro de interesse', pre_registers_path, style: 'color: white'
