--- a/engines/candidate/app/views/candidate/enterprises/success.html.haml
+++ b/engines/candidate/app/views/candidate/enterprises/success.html.haml
@@ -6,7 +6,10 @@
     .title-header Manifestação de interesse ao Empreendimento
 .ui.grid.container
   .column
-    Aguarde contato da Construtora GCE para agendamento da sua visita, entrega da documentação e análise de crédito para financiamento de unidade.
+    Manifestação registrada com sucesso! Agende a entrega da sua documentação através do menu 
+    %b Agendamento 
+    utilizando a agenda 
+    %b Crixá - Mutirão Cadunico Sede
     %br/
     %br/
     = link_to "Retornar para o início", root_path, class: 'ui button yellow fluid'
