--- a/engines/candidate/app/views/candidate/enterprises/success.html.haml
+++ b/engines/candidate/app/views/candidate/enterprises/success.html.haml
@@ -6,10 +6,7 @@
     .title-header Manifestação de interesse ao Empreendimento
 .ui.grid.container
   .column
-    Manifestação registrada com sucesso! Agende a entrega da sua documentação através do menu 
-    %b Agendamento 
-    utilizando a agenda 
-    %b Crixá - Mutirão Cadunico Sede
+    Manifestação registrada com sucesso!
     %br/
     %br/
     = link_to "Retornar para o início", root_path, class: 'ui button yellow fluid'
