--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -38,8 +38,13 @@
   - indication = current_cadastre.enterprise_cadastres.where('enterprise_id not in (59,64,70,71) and inactive is not true and accepted_date is null').last
   - indication_clebson = current_cadastre.enterprise_cadastres.where('inactive is not true')
   - indication_active = current_cadastre.enterprise_cadastres.where('inactive is not true').last
-  - indication_crixa = current_cadastre.enterprise_cadastres.where(enterprise_id: 182, indication_situation_id: 2)
+  - indication_crixa = current_cadastre.enterprise_cadastres.where(enterprise_id: 182, indication_type_id: 999)
 
+  - if indication_crixa.present?
+    - if !indication_crixa.last.inactive
+      %p
+        %span.ui.label.green{style: 'font-size: 16px !important; text-align: center;'}
+          Sua manifestação de interesse para Parque dos Ipês - Crixá foi registrada. 
   - if !indication_crixa.present? && (current_cadastre.income.to_f < 1800.01 ) &&  current_cadastre.current_situation.situation_status_id == 4 && [14,72].include?(current_cadastre.current_procedural.procedural_status_id) && (convocation.present? && convocation.convocation_id > 1524) 
     %br/
     %br/
