--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -42,13 +42,13 @@
           %i.icon.file.huge.gray
       .text-center
         Requerimentos
-  - if current_entity.allow_accredited?
-    .column
-      .ui.segment.text-center
-        %a{href: "#{entity.chats_path}"}
-          %i.icon.chat.huge.gray
-      .text-center
-        Conversas
+  -# - if current_entity.allow_accredited?
+  -#   .column
+  -#     .ui.segment.text-center
+  -#       %a{href: "#{entity.chats_path}"}
+  -#         %i.icon.chat.huge.gray
+  -#     .text-center
+  -#       Conversas
   - if current_entity.allow_accredited?
     .column
       .ui.segment.text-center
