--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
@@ -70,15 +70,16 @@
 						%i.icon.warning{style: 'color: gray'}
 						= link_to "Contatos pessoais", edit_custom_custom_ticket_custom_contact_path(@ticket, @ticket.cadastre_mirror_id), style: "#{@ticket.action_four ? 'color: white' : ''}"
 
-		-# %tbody{style: "#{@ticket.action_five ? 'background-color: #51a551' : ''}"}
-		-# 	%tr
-		-# 		%td
-		-# 			- if @ticket.action_five
-		-# 				%i.icon.check{style: 'color: white'}
-		-# 				= link_to "Certidões dos cartórios", custom_custom_ticket_message_path(@ticket, step: 'document'), remote: true, style: "#{@ticket.action_five ? 'color: white' : ''}"
-		-# 			- else
-		-# 				%i.icon.warning{style: 'color: gray'}
-		-# 				= link_to "Certidões dos cartórios", new_custom_custom_ticket_custom_document_path(@ticket, type: 'document'), style: "#{@ticket.action_five ? 'color: white' : ''}"
+		- if @ticket.required_special_document?
+			%tbody{style: "#{@ticket.action_five ? 'background-color: #51a551' : ''}"}
+				%tr
+					%td
+						- if @ticket.action_five
+							%i.icon.check{style: 'color: white'}
+							= link_to "Certidões dos cartórios", custom_custom_ticket_message_path(@ticket, step: 'document'), remote: true, style: "#{@ticket.action_five ? 'color: white' : ''}"
+						- else
+							%i.icon.warning{style: 'color: gray'}
+							= link_to "Certidões dos cartórios", new_custom_custom_ticket_custom_document_path(@ticket, type: 'document'), style: "#{@ticket.action_five ? 'color: white' : ''}"
 
 	%br
 	%br
