--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -5,7 +5,8 @@
     .sub-title #{current_entity.name}
     .divider
     .sub-title
-      .ui.label.blue #{current_entity.current_situation_name}
+      .ui.label.blue 
+        = temp_entity_current_situation
 .divider
 .ui.three.column.grid.container.black
   .column
