--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -6,7 +6,7 @@
     .divider
     .sub-title
       .ui.label.blue 
-        = temp_entity_current_situation
+        = temp_entity_current_situation(current_entity.cnpj)
 .divider
 .ui.three.column.grid.container.black
   .column
