--- a/engines/technical_assistance/app/views/technical_assistance/pre_registers/_form.html.haml
+++ b/engines/technical_assistance/app/views/technical_assistance/pre_registers/_form.html.haml
@@ -1,35 +1,36 @@
+%h2
+  Inscrições encerradas no momento
+-# = simple_form_for @pre_register do |f|f
+-#   = f.input :name,label:'Nome', input_html:{placeholder: 'Nome Completo'}
+-#   = f.input :cpf,label:'CPF', input_html: {class: 'cpf'}
+-#   = f.input :city_id, label: 'Cidade', as: :select, collection: Core::Address::City.where(id: 807), input_html: { id: 'city_id'}, include_blank: 'Selecione a cidade'
+-#   = f.input :address,label:'Endereço', input_html:{placeholder: 'Endereço Completo'}
+-#   = f.input :phone, as: :integer, label:'Telefone', placeholder: "Informe seu telefone"
+-#   = f.input :cad,label:'CAD Único', input_html:{placeholder: 'Nº do CADÚnico se possuir'}
+-#   = f.input :special_condition, as: :text, input_html: { maxlength:"250", id: :special_condition}, label:'Fale um pouco sobre as dificuldades de uso da sua moradia em relação à sua deficiência ou de algum membro da família que resida na mesma moradia:'
+-#   #counter{style: "color: white"}
+-#     (0/250)
+-#   %br/
+-#   = f.submit "Cadastrar", class: "ui button white fluid", data: { disable_with: t(:disable_with)}
 
-= simple_form_for @pre_register do |f|f
-  = f.input :name,label:'Nome', input_html:{placeholder: 'Nome Completo'}
-  = f.input :cpf,label:'CPF', input_html: {class: 'cpf'}
-  = f.input :city_id, label: 'Cidade', as: :select, collection: Core::Address::City.where(id: 807), input_html: { id: 'city_id'}, include_blank: 'Selecione a cidade'
-  = f.input :address,label:'Endereço', input_html:{placeholder: 'Endereço Completo'}
-  = f.input :phone, as: :integer, label:'Telefone', placeholder: "Informe seu telefone"
-  = f.input :cad,label:'CAD Único', input_html:{placeholder: 'Nº do CADÚnico se possuir'}
-  = f.input :special_condition, as: :text, input_html: { maxlength:"250", id: :special_condition}, label:'Fale um pouco sobre as dificuldades de uso da sua moradia em relação à sua deficiência ou de algum membro da família que resida na mesma moradia:'
-  #counter{style: "color: white"}
-    (0/250)
-  %br/
-  = f.submit "Cadastrar", class: "ui button white fluid", data: { disable_with: t(:disable_with)}
+-# :javascript
+-#   $(document).ready(function(){
+-#     $("#city_id").on('change', function(){
+-#       id = $(this).val();
+-#       $.getJSON("#{burgh_path}?city_id=" +  id, function(data) {
+-#         var options = "<option value>selecione...</option>";
+-#         $.each(data, function(key, val) {
+-#           options += "<option value='" + val.id + "'>" + val.name + "</option>";
+-#         });
+-#         $("#burgh_id").html(options);
+-#       });
+-#     });
+-#   });
 
-:javascript
-  $(document).ready(function(){
-    $("#city_id").on('change', function(){
-      id = $(this).val();
-      $.getJSON("#{burgh_path}?city_id=" +  id, function(data) {
-        var options = "<option value>selecione...</option>";
-        $.each(data, function(key, val) {
-          options += "<option value='" + val.id + "'>" + val.name + "</option>";
-        });
-        $("#burgh_id").html(options);
-      });
-    });
-  });
+-#   $(document).on("input", "#special_condition", function () {
+-#     var limit = 250;
+-#     var counter = $(this).val().length;
+-#     var rest = limit - counter;
 
-  $(document).on("input", "#special_condition", function () {
-    var limit = 250;
-    var counter = $(this).val().length;
-    var rest = limit - counter;
-
-    $("#counter").html("(" + rest + "/" + limit + ")");
-  });
+-#     $("#counter").html("(" + rest + "/" + limit + ")");
+-#   });
