--- a/engines/regularization/app/views/regularization/home/index.html.haml
+++ b/engines/regularization/app/views/regularization/home/index.html.haml
@@ -32,3 +32,10 @@
         = image_tag ('/images/search.png')
     .text-center
       Acompanhar Requerimento
+  .column
+    .ui.text-center
+      %a{href: "http://www.codhab.df.gov.br/regularizacao/mestre-darmas/new"}
+        -# %i.icon.plane.huge
+        = image_tag ('http://www.codhab.df.gov.br/uploads/archive/files/8d05b0c65f86d4b9a9525eac16ca3630.png')
+    .text-center
+      Mestre D'armas
