--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -103,25 +103,26 @@
 - if (indication_active.present? && indication_active.accepted_date.present?) || !indication_active.present? || !indication.present?
   .divider
   .ui.three.column.grid.container.black
-    - @convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where('convocation_id in (1688,1467,1671,1683)')
-    
-    - if !current_cadastre.current_procedural.present? || (current_cadastre.current_procedural.present? && ![8,4].include?(current_cadastre.current_procedural.procedural_status_id))
+    - if Date.current < Date.parse('2021-01-01')
+      - @convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where('convocation_id in (1688,1467,1671,1683)')
+      
+      - if !current_cadastre.current_procedural.present? || (current_cadastre.current_procedural.present? && ![8,4].include?(current_cadastre.current_procedural.procedural_status_id))
 
-      - if current_cadastre.program_id !=3 && (current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3))
-        
-        - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present? && (![1671,1683,1467].include?(current_cadastre.cadastre_convocations.last.convocation_id) || Attendance::CustomTicket.where(cadastre_id: @convocation).present?)
-          .column
-            .ui.segment.text-center{style: 'background-color: #0892ff !important'}
-              %a{href: "#{attendance.custom_custom_tickets_path}"}
-                %i.icon.check.huge.gray{style: 'color: white !important'}
-            .text-center
-              Habilitação
-          .column
-            .ui.segment.text-center{style: 'background-color: #ffcb08 !important'}
-              %a{href: "#{candidate.help_path}"}
-                %i.icon.help.circle.huge.gray{style: 'color: white !important'}
-            .text-center
-              Dúvidas
+        - if current_cadastre.program_id !=3 && (current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3))
+          
+          - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present? && (![1671,1683,1467].include?(current_cadastre.cadastre_convocations.last.convocation_id) || Attendance::CustomTicket.where(cadastre_id: @convocation).present?)
+            .column
+              .ui.segment.text-center{style: 'background-color: #0892ff !important'}
+                %a{href: "#{attendance.custom_custom_tickets_path}"}
+                  %i.icon.check.huge.gray{style: 'color: white !important'}
+              .text-center
+                Habilitação
+            .column
+              .ui.segment.text-center{style: 'background-color: #ffcb08 !important'}
+                %a{href: "#{candidate.help_path}"}
+                  %i.icon.help.circle.huge.gray{style: 'color: white !important'}
+              .text-center
+                Dúvidas
 
 
     .column
