--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -107,13 +107,13 @@
     - @jc = Candidate::PreHabilitado.find_by(cadastre_id: current_cadastre.id) rescue nil
     - @cooperative_convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where('convocation_id in (1809,1808,1806,1807,1683)') rescue nil 
 
-    - if Date.current < Date.parse('2021-01-01') || Attendance::CustomTicket.where(cadastre_id: current_cadastre.id).present? || !@jc.nil? || !@cooperative_convocation.nil? || !@jc_indication.nil?
+    - if Date.current < Date.parse('2021-01-01') || Attendance::CustomTicket.where(cadastre_id: current_cadastre.id).present? || !@jc.nil? || !@cooperative_convocation.nil?
       
       - @convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where('convocation_id in (1688,1467,1671,1683)')
       
       - if !current_cadastre.current_procedural.present? || (current_cadastre.current_procedural.present? && ![8,4].include?(current_cadastre.current_procedural.procedural_status_id))
 
-        - if current_cadastre.program_id !=3 && (current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3))
+        - if current_cadastre.program_id !=3 && (current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)) || !@jc_indication.nil?
           
           - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present? && (![1671,1683,1467].include?(current_cadastre.cadastre_convocations.last.convocation_id) || Attendance::CustomTicket.where(cadastre_id: @convocation).present?)
             .column
