--- a/engines/entity/app/views/entity/indications/new.html.haml
+++ b/engines/entity/app/views/entity/indications/new.html.haml
@@ -13,7 +13,7 @@
 
     %br/
     %br/
-    = link_to "Li e aceito os termos acima", entity.indication_accept_term_path(@enterprise.id), class: 'btn btn-success btn-block btn-lg', data: { confirm: 'Tem certeza que deseja aceitar os termos?'}
+    = link_to "Li e aceito os termos acima", entity.indication_accept_term_path(@enterprise.id), class: 'ui button green fluid', data: { confirm: 'Tem certeza que deseja aceitar os termos?'}
   
   - else
     %table.ui.celled.table
