--- a/engines/entity/app/views/entity/indications/new.html.haml
+++ b/engines/entity/app/views/entity/indications/new.html.haml
@@ -9,7 +9,7 @@
 .ui.container
   - if ::Entity::EnterpriseTerm.find_by(enterprise_id: @enterprise.id, entity_id: current_entity.id).nil? && @enterprise.required_term && params[:term] == "1"
   
-    %p CONTEUDO DO TERMO
+    = render 'term'
 
     %br/
     %br/
