--- a/engines/entity/app/views/entity/indications/_term.html.haml
+++ b/engines/entity/app/views/entity/indications/_term.html.haml
@@ -72,7 +72,7 @@
     %b 5. Do Prazo para Manifestação de Interesse e Apresentação de Demanda
 
   %p A entidade (cooperativa/associação) que neste ato adere a esse Termo, terá prazo de 180
-  (cento e oitenta) dias corridos, contados da data da publicação do edital nº XX, para
+  (cento e oitenta) dias corridos, contados da data da publicação do edital nº 02/2021, para
   indicar de demanda das cotas a elas destinadas.
 
   %p Parágrafo Único – Caso esta entidade não conclua a indicação da demanda de
