--- a/engines/entity/app/views/entity/indications/_term.html.haml
+++ b/engines/entity/app/views/entity/indications/_term.html.haml
@@ -46,4 +46,4 @@
 
   %p As partes elegem a Circunscrição Judiciária de Brasília, Distrito Federal, para dirimir qualquer conflito acerca desse instrumento. 
 
-  %p Para mais informações sobre a entrega da manifestação do ANEXO I, acesse http://www.codhab.df.gov.br/pagina/178 e saiba mais.
+  %p Para mais informações sobre a entrega da manifestação do ANEXO I do edital de chamamento 02/2021, acesse http://www.codhab.df.gov.br/pagina/178 e saiba mais.
