--- a/engines/entity/app/views/entity/indications/_term.html.haml
+++ b/engines/entity/app/views/entity/indications/_term.html.haml
@@ -1,4 +1,4 @@
-%div{style: 'text-align: justify; padding: 25px; margin-bottom: 100px;'}
+%div{style: 'text-align: justify; padding: 25px;'}
   %p A entidade declara, para os devidos fins, que está ciente e em conformidade com todos os termos, condições Edital de Chamamento Público N° 02/2021, cujo objeto é manifestação de interesse – entidades (associações e ou cooperativas) credenciadas junto a – relativo a indicação de candidatos para a formação de demanda no projeto denominado alto mangueiral, localizado na área de 124,4871 hectares, inserida em parte dos lotes 6, 7, 8 e 9 da área Isolada Papuda.
   %br/
   %p Ao firmar o presente, o representante da entidade (cooperativa/associação) atesta perante a Companhia de Desenvolvimento Habitacional Do Distrito Federal – CODHAB, para todos os fins e efeitos, ter os poderes necessários e suficientes para validamente vinculá-la nos termos da declaração dada neste documento, conforme documentação em anexo, e que tais documentos estão regularmente em vigor e entregues neste ato à Companhia.
