--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,7 @@
 
   %body
     .ui.container-fluid#animate.mega-margin
-      = yield
+      EM MANUTEMÇÃO
     .ui.modal
     #master.ui.modal
     .mega-divider
